# Rigid-Body-Sim

./: .gitignore  README.md  lab1_log.txt  lab1_report.md  main.py  pyproject.toml
.github/workflows/: pytest.yml
render/: viewer.py
scripts/: generate_lab1_gifs.py
sim/: math_utils.py  solver.py  state.py  taichi_step.py  world.py
tests/: test_math_utils.py  test_solver.py  test_state.py  test_world.py
